--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 name: Update IP List
-
 on:
-  #schedule:
-    #- cron: '0 */3 * * *' # 每3小时运行一次
+  schedule:
+    - cron: '0 3 * * *' # 每天凌晨3点运行一次
   workflow_dispatch: # 允许手动触发
   #push: # 允许提交触发
 
@@ -10,7 +9,10 @@ jobs:
 
   update-ip-list:
     runs-on: ubuntu-latest
-    
+    # 指定使用 environment
+    environment: 
+      name: production
+  
     steps:
     - uses: actions/checkout@v3
       
@@ -30,8 +32,8 @@ jobs:
         
     - name: Commit and push changes
       run: |
-        git config --global user.email "tianshideyou@proton.me"
-        git config --global user.name "tianshipapa"
+        git config --global user.email "${{ vars.COMMIT_EMAIL }}"
+        git config --global user.name "${{ vars.COMMIT_NAME }}"
         if [ -n "$(git status --porcelain)" ]; then
           git add ip.txt
           git commit -m "Automatic update"
